# nnlib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  CheckAVXSupport.cmake  Doxyfile  LICENSE.md  README.md  build.sh  format.sh  lint.sh  main.cpp
.github/workflows/: deploy.yml  documentation.yml  lint.yml  style_check.yml  test.yml  test_and_install.yml
ann/: CMakeLists.txt  activation.cpp  activation.cu  activation.cuh  activation.h  backpropagation.cu  backpropagation.cuh  layer.cpp  layer.h  network.cpp  network.h
cmake/: CheckAVXSupport.cmake
data/: features.txt  targets.txt  unknown.txt
docs/: _r_e_a_d_m_e_8md.html  activation_8h.html  activation_8h_source.html  allocation_8cpp.html  allocation_8h.html  allocation__gpu_8cu.html  annotated.html  class_layer-members.html  class_linear_on_device_evaluator.html  class_linear_on_host_evaluator.html  class_matrix.html  class_network-members.html  class_network.html  class_re_l_u_activation-members.html  class_re_l_u_on_host_evaluator.html  class_sigmoid_activation-members.html  class_sigmoid_on_host_evaluator-members.html  class_size_mismatch_exception-members.html  class_unexpected_c_u_d_a_call_exception-members.html  class_unexpected_c_u_d_a_call_exception.html  convert_8cpp.html  convert_8h.html  dir_289b49f6c9a4b183a2e83811704d3f49.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_3f3b624d17d8bcf2356f5291476f3c29.html  dir_8cfd86035bd46d362858acac54bb7f3a.html  dir_997a5fd2c999b9e8709bc2bdb5f2e41e.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_f3499c6e4a6933b685fe3d6d523000e7.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  index.html  jquery.js  layer_8h.html  linear__activation_8cpp.html  linear__on__device__evaluator_8cu.html  location__verifiers_8h.html  (+24 more)
docs/html/: _m_n_i_s_t-example.html  _training-example.html  activation_8cpp.html  activation_8h.html  activation_8h_source.html  allocation_8cpp.html  allocation_8h.html  allocation_8h_source.html  allocation__gpu_8cu.html  allocation__gpu_8cuh.html  annotated.html  assert_8cuh.html  class_activation-members.html  class_activation.html  class_activation_evaluator-members.html  class_activation_evaluator.html  class_different_data_location_exception-members.html  class_different_data_location_exception.html  class_layer-members.html  class_layer.html  class_linear_activation-members.html  class_linear_activation.html  class_linear_on_device_evaluator-members.html  class_linear_on_device_evaluator.html  class_linear_on_host_evaluator-members.html  class_linear_on_host_evaluator.html  class_matrix-members.html  class_matrix.html  class_network-members.html  class_network.html  class_re_l_u_activation-members.html  class_re_l_u_activation.html  class_re_l_u_on_device_evaluator-members.html  class_re_l_u_on_device_evaluator.html  class_re_l_u_on_host_evaluator-members.html  class_re_l_u_on_host_evaluator.html  class_sigmoid_activation-members.html  class_sigmoid_activation.html  class_sigmoid_on_device_evaluator-members.html  class_sigmoid_on_device_evaluator.html  (+91 more)
docs/search/: all_10.js  all_13.js  all_14.js  all_2.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_f.js  classes_1.js  defines_4.js  defines_6.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_4.js  files_7.js  files_8.js  files_b.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_9.js  functions_b.js  functions_d.js  functions_f.js  searchdata.js  variables_0.js  variables_3.js
examples/: build.sh
examples/mnist/: CMakeLists.txt  main.cpp
examples/titanic/: CMakeLists.txt  main.cpp  prepare.py
exceptions/: size_mismatch_exception.cpp
gpu/: CMakeLists.txt  allocation_gpu.cu  allocation_gpu.cuh  assert.cuh  backpropagation.cu  backpropagation.cuh  layer_device_pointers.cpp  layer_device_pointers.h  matrix_operations.cu  matrix_operations.cuh  vector_operations.cu  vector_operations.cuh  verify.cu  verify.cuh
include/: CMakeLists.txt  activation.h  allocation.h  convert.h  layer.h  loss.h  matrix.h  metric.h  network.h  onehot_encode.h  read.h  session.cuh  session.h  tensor.h  vector.h  verify.cuh
math/: CMakeLists.txt  convert.cpp  convert.h  matrix.cpp  matrix.h  matrix_operations.cu  matrix_operations.cuh  vector.cpp  vector.h  vector_operations.cu  vector_operations.cuh
scripts/: build.sh  build_example.sh  fix_format.sh  format.sh  lint.sh  test.sh
src/: CMakeLists.txt
src/ann/: CMakeLists.txt  activation.cu  layer.cpp  (+8 more)
test/: CMakeLists.txt  assertions.cpp  assertions.h  main.cpp  matrix_operations_device_tests.cpp  matrix_operations_host_tests.cpp  test_utils.cpp  test_utils.h  utils.cpp  utils.h  vector_operations_device_tests.cpp  vector_operations_host_tests.cpp
test/activations/: CMakeLists.txt  linear_activation_device_tests.cpp  linear_activation_host_tests.cpp  relu_activation_device_tests.cpp  relu_activation_host_tests.cpp  sigmoid_activation_device_tests.cpp  sigmoid_activation_host_tests.cpp
test/ann/: CMakeLists.txt  network_test.cpp
test/ann/activations/ReLU/: relu_activation_common.cpp  relu_activation_common.h  relu_activation_device.cpp  relu_activation_host.cpp
test/ann/activations/linear/: linear_activation_common.cpp  linear_activation_common.h  linear_activation_device.cpp  linear_activation_host.cpp
test/ann/activations/sigmoid/: sigmoid_activation_common.cpp  sigmoid_activation_common.h  sigmoid_activation_device.cpp  sigmoid_activation_host.cpp
test/ann/losses/: binary_cross_entropy.cpp  categorical_cross_entropy.cpp  mean_squared_error.cpp
test/ann/metrics/: binary_accuracy.cpp  categorical_accuracy.cpp
test/math/: CMakeLists.txt  matrix_operations_device_tests.cpp  matrix_operations_host_tests.cpp  tensor_operations.cpp  tensor_operations_common.cpp  tensor_operations_common.h  tensor_operations_device.cpp  tensor_operations_host.cpp  vector_operations_device_tests.cpp  vector_operations_host_tests.cpp
utils/: CMakeLists.txt  allocation.cpp  allocation.h  onehot_encode.cpp  onehot_encode.h  printing.cpp  read.cpp  read.h
(+137 files in other folders)
